# src/main/kotlin/com/example/householdExpenses/presentation/api/expense/ExpenseListResponseDto.kt
@@ -1,0 +1,7 @@
+package com.example.householdExpenses.presentation.api.expense
+
+import java.time.LocalDate
+
+data class ExpenseListResponseDto(
+    val expenses: List<ExpenseResponseDto>
+)
